objects/nPortal__Context__c.object
<CustomObject>
    <description>This object provides contextual information about users and their relationships to their online applications. Multiple users can be associated with a single application. The primary applicant is assigned the context Applicant. Other contexts, such as Owner or Other Involved, are assigned the users added to the application by the primary applicant. Depending on a user&apos;s context, they are given a customized UI workflow in Online Application. A new context record is created anytime a user is associated with any application.</description>
    <fields>
        <fullName>nPortal__Application__c</fullName>
        <description>The Application field on the Context object auto-populates with a lookup to the application record to which the Context is associated.</description>
        <inlineHelpText>This is the application that this context is associated with.</inlineHelpText>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Contexts</relationshipLabel>
        <relationshipName>Contexts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nPortal__Context_Complete__c</fullName>
        <description>This field tracks the date and time at which the user associated with this Context completed the online application requirements.</description>
        <label>Context Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nPortal__Context_Due__c</fullName>
        <description>This field tracks the date and time by which a user must complete their application requirements to avoid expiration.</description>
        <label>Context Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nPortal__Context_Start__c</fullName>
        <description>This field tracks the date and time when the user began filling out their online application.</description>
        <label>Context Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nPortal__Context_Type__c</fullName>
        <description>Depending on whether the user is a primary applicant, business co-owner, co-borrower or guarantor, or other involved entity, their context record populates with a Context Type. Context Type determines the UI workflow the user experiences in the online application.</description>
        <inlineHelpText>The context type indicates whether the user is a primary applicant (Applicant), a business co-owner (Owner), or a co-borrower or guarantor (Other Involved [Individual].)</inlineHelpText>
        <label>Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Credit_Transaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to display the credit report transaction log generated from a credit pull in the current Context.</description>
        <inlineHelpText>Automatically populates with the transaction log generated by a credit report for this Context</inlineHelpText>
        <label>Credit Transaction Log</label>
        <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
        <relationshipLabel>Contexts</relationshipLabel>
        <relationshipName>Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__ID_Scan_Status__c</fullName>
        <description>The system automatically populates this picklist to track the progress through the ID Scan workflow by using the current ID Scan status</description>
        <inlineHelpText>The status of the ID Scan workflow automatically populates in this field.</inlineHelpText>
        <label>ID Scan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ID Scan Success</fullName>
                </value>
                <value>
                    <fullName>ID Scan Failure</fullName>
                </value>
                <value>
                    <fullName>Bad Image</fullName>
                </value>
                <value>
                    <fullName>Communication Error</fullName>
                </value>
                <value>
                    <fullName>Vendor Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nPortal__ID_Scan_Verification_Date__c</fullName>
        <description>The system automatically populates this date/time field to store the recent date/time the contact initiated in the ID scan workflow.</description>
        <inlineHelpText>The date/time of verification for ID Scan automatically populates in this field.</inlineHelpText>
        <label>ID Scan Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nPortal__Identity_Verification_Date__c</fullName>
        <description>This field automatically populates. It indicates the most recent date and time the applicant initiated identity verification.</description>
        <inlineHelpText>This field automatically populates. It indicates the most recent date and time the applicant initiated identity verification.</inlineHelpText>
        <label>Identity Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nPortal__Identity_Verification_Status__c</fullName>
        <description>This picklist field automatically populates. It indicates the identity verification status of the applicant.</description>
        <inlineHelpText>This picklist field automatically populates. It indicates the identity verification status of the applicant.</inlineHelpText>
        <label>Identity Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>ID Verification Failure</fullName>
                </value>
                <value>
                    <fullName>Communication Error</fullName>
                </value>
                <value>
                    <fullName>Unable to Generate Questions</fullName>
                </value>
                <value>
                    <fullName>Not Eligible for Questions</fullName>
                </value>
                <value>
                    <fullName>Questions Failed - No Questions Available</fullName>
                </value>
                <value>
                    <fullName>Retry Limit Exceeded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nPortal__Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Every context record is associated with a session record.</description>
        <inlineHelpText>The session ID with which this application&apos;s user context is associated.</inlineHelpText>
        <label>Session</label>
        <referenceTo>nFORCE__Session__c</referenceTo>
        <relationshipLabel>Contexts</relationshipLabel>
        <relationshipName>Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field populates with the name of the user with whom the context is associated.</description>
        <inlineHelpText>This is the name of the user with whom this context is associated.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contexts</relationshipLabel>
        <relationshipName>Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Context</label>
    <nameField>
        <displayFormat>CTX-{000000}</displayFormat>
        <label>Context Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contexts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>